fwd-proxy/envoy.yaml
static_resources:
  listeners:
    - name: primary_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: primary_route
                  virtual_hosts:
                    - name: primary_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: aggregate_cluster
                            retry_policy:
                              retry_on: "5xx"
                              num_retries: 2
                http_filters:
                  - name: envoy.filters.http.router
#          transport_socket:
#            name: envoy.transport_sockets.tls
#            typed_config:
#              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
#              common_tls_context:
#                tls_certificates:
#                  - certificate_chain:
#                      filename: "[CERT_PATH]"
#                    private_key:
#                      filename: "[KEY_PATH]"
  clusters:
    - name: aggregate_cluster
      connect_timeout: 0.25s            
      lb_policy: CLUSTER_PROVIDED          
      cluster_type:
        name: envoy.clusters.aggregate
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.aggregate.v3.ClusterConfig
          clusters:
            - dev_cluster
            - prod_cluster
    - name: dev_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      health_checks:
        timeout: 1s
        interval: 10s
        unhealthy_threshold: 2
        healthy_threshold: 1
        http_health_check:
          path: "/api/health"
      load_assignment:
        cluster_name: dev_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: codespace.ozy.xyz
                      port_value: 3000
    - name: prod_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      health_checks:
        timeout: 1s
        interval: 10s
        unhealthy_threshold: 2
        healthy_threshold: 1
        http_health_check:
          path: "/api/health"
      load_assignment:
        cluster_name: prod_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 3000

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000
